--- a/.github/workflows/Synergy-mac.yml
+++ b/.github/workflows/Synergy-mac.yml
@@ -14,7 +14,7 @@ on:
         default: 'false'
         
 env:
-  REPO_URL: https://github.com/symless/synergy-core/tree/v1.13.0-stable
+  REPO_URL: https://github.com/symless/synergy-core.git
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
