--- a/.github/workflows/Synergy-mac.yml
+++ b/.github/workflows/Synergy-mac.yml
@@ -46,13 +46,19 @@ jobs:
           cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=/usr/local/opt/qt ..
           . ./version
           make -j
+          echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+          echo "::set-output name=status::success"
           
+      - name: Upload bin directory
+        uses: actions/upload-artifact@main
+        if: steps.compile.outputs.status == 'success'
+        with:
+         name: Synergy-mac-bin-${{ env.FILE_DATE }}
+         path: synergy-core/build/bin
+
       - name: SSH connection to Actions
         uses: P3TERX/ssh2actions@v1.0.0
         if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
         env:
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-      
-      - name: Run unit test
-        run: ./build/bin/unittests
