--- a/.github/workflows/Synergy-mac.yml
+++ b/.github/workflows/Synergy-mac.yml
@@ -37,6 +37,7 @@ jobs:
         run: brew install qt
 
       - name: Build
+        id: compile
         run: |
           pwd
           cd synergy-core
