--- a/.github/workflows/Synergy-linux.yml
+++ b/.github/workflows/Synergy-linux.yml
@@ -57,7 +57,7 @@ jobs:
         uses: actions/upload-artifact@main
         if: steps.compile.outputs.status == 'success'
         with:
-         name: Synergy-mac-bin${{ env.FILE_DATE }}
+         name: Synergy-linux-bin${{ env.FILE_DATE }}
          path: synergy-core/build/bin
 
       - name: SSH connection to Actions
