--- a/.github/workflows/Synergy-win.yml
+++ b/.github/workflows/Synergy-win.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Clone source code
         run: |
           df -hT $PWD
-          git clone $REPO_URL synergy-core
+          git clone $REPO_URL
           
       - name: Cache Qt
         id: cache-qt
