--- a/mac/base.conf
+++ b/mac/base.conf
@@ -11,19 +11,26 @@ section: screens
     # three hosts named:  mac-mini, macbook, and windows
     # These are the nice names of the hosts to make it easy to write the config file
     # The aliases section below contain the "actual" names of the hosts (their hostnames)
-    mac.lan:
+    Hackintosh.lan:
     DESKTOP-KN66FOT:
+    yangs:
 end
 
 section: links
     # windows is to the right of macbook
     # mac-mini is to the left of macbook
     DESKTOP-KN66FOT:
-        right = mac.lan # the numbers in parentheses indicate the percentage of the screen's edge to be considered active for switching)
+        left = Hackintosh.lan # the numbers in parentheses indicate the percentage of the screen's edge to be considered active for switching)
+        up = yangs
 
     # macbook is to the left of windows
-    mac.lan:
-        left  = DESKTOP-KN66FOT
+    Hackintosh.lan:
+        left  = yangs
+        right = DESKTOP-KN66FOT
+
+    yangs:
+        right = Hackintosh.lan
+        down = DESKTOP-KN66FOT
 end
 
 #section: aliases
@@ -37,7 +44,7 @@ end
 #end
 
 section: options
-    switchDelay = 400 #ා how long does it take to switch the screen when the mouse slides to the edge
+    switchDelay = 100 #ා how long does it take to switch the screen when the mouse slides to the edge
     clipboardSharing = true #ා shared clipboard
     clipboardSharingSize = 10000 # the shared byte size limit of the clipboard, in kilobytes
 end
