--- a/.github/workflows/Synergy-mac.yml
+++ b/.github/workflows/Synergy-mac.yml
@@ -1,61 +1,115 @@
 # This is a basic workflow to help you get started with Actions
 
-name:  Synergy-mac
+name: Mac
 
-# Controls when the action will run. 
 on:
-  
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-    inputs:
-      ssh:
-        description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
-        
-env:
-  REPO_URL: https://github.com/symless/synergy-core.git
+  release:
+    types: [created]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: macos-10.15
+  build-on-mac-10_13:
+    runs-on: [self-hosted, macOS, X64, "10.13"]
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    strategy:
+      matrix:
+        include:
+          - name: "synergy"
+            remote_folder: "v1-core-standard"
+            enterprise: ""
+            business: ""
+          - name: "synergy-enterprise"
+            remote_folder: "v1-core-enterprise"
+            enterprise: "1"
+            business: ""
+          - name: "synergy-business"
+            remote_folder: "v1-core-business"
+            enterprise: ""
+            business: "1"
+    env:
+      GIT_COMMIT: ${{ github.sha }}
+      SYNERGY_ENTERPRISE: ${{ matrix.enterprise }}
+      SYNERGY_BUSINESS: ${{ matrix.business }}
+      Qt5_DIR: /usr/local/opt/qt/5.15.2/clang_64
+      OpenSSL_DIR: /usr/local/ssl
+      CODESIGN_ID: "Developer ID Application: Symless Ltd (4HX897Y6GJ)"
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Clone source code
+      - name: Setup Environment
         run: |
-          df -hT $PWD
-          git clone $REPO_URL synergy-core
+          python3 -m pip install dmgbuild
 
-      - name: install qt
-        run: brew install qt openssl
-
-      - name: Build
-        id: compile
+      - name: Build SYNERGY
+        env:
+          CMAKE_PREFIX_PATH: "${{ env.Qt5_DIR }};${{ env.OpenSSL_DIR }}"
         run: |
-          pwd
-          cd synergy-core
+          export PATH="$Qt5_DIR/bin:$PATH"
+          python3 CI/build_version.py
           mkdir build
           cd build
-          pwd
-          cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=/usr/local/opt/qt ..
+          cmake \
+            -DCMAKE_OSX_DEPLOYMENT_TARGET=10.13 \
+            -DCMAKE_OSX_ARCHITECTURES=x86_64 \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_CONFIGURATION_TYPES=Release ..
           . ./version
           make -j
-          echo "::set-output name=status::success"
-          echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+          make install/strip
+
+      - name: Version Info
+        id: version
+        run: |
+          . ./build/version
+          SYNERGY_VERSION="${SYNERGY_VERSION_MAJOR}.${SYNERGY_VERSION_MINOR}.${SYNERGY_VERSION_PATCH}"
+          SYNERGY_REVISION=$(git rev-parse --short=8 HEAD)
+          SYNERGY_DMG_VERSION="${SYNERGY_VERSION}-${SYNERGY_VERSION_STAGE}.${SYNERGY_REVISION}"
+          echo "::set-output name=SYNERGY_VERSION_MAJOR::$SYNERGY_VERSION_MAJOR"
+          echo "::set-output name=SYNERGY_VERSION_MINOR::$SYNERGY_VERSION_MINOR"
+          echo "::set-output name=SYNERGY_VERSION_PATCH::$SYNERGY_VERSION_PATCH"
+          echo "::set-output name=SYNERGY_VERSION_STAGE::$SYNERGY_VERSION_STAGE"
+          echo "::set-output name=SYNERGY_VERSION_BUILD::$SYNERGY_VERSION_BUILD"
+          echo "::set-output name=SYNERGY_VERSION::$SYNERGY_VERSION"
+          echo "::set-output name=SYNERGY_REVISION::$SYNERGY_REVISION"
+          echo "::set-output name=SYNERGY_DMG_VERSION::$SYNERGY_DMG_VERSION"
+          SYNERGY_PACKAGE_NAME=${{ matrix.name }}
+          SYNERGY_REMOTE_FOLDER="${{ matrix.remote_folder }}/${SYNERGY_VERSION}/${SYNERGY_VERSION_STAGE}/b${SYNERGY_VERSION_BUILD}-${SYNERGY_REVISION}"
+          SYNERGY_DMG_FILENAME="${SYNERGY_PACKAGE_NAME}_${SYNERGY_DMG_VERSION}_macos-10.13_x86-64.dmg"
+          echo "SYNERGY_REMOTE_FOLDER: $SYNERGY_REMOTE_FOLDER"
+          echo "::set-output name=SYNERGY_REMOTE_FOLDER::$SYNERGY_REMOTE_FOLDER"
+          echo "::set-output name=SYNERGY_PACKAGE_NAME::$SYNERGY_PACKAGE_NAME"
+          echo "::set-output name=SYNERGY_DMG_FILENAME::$SYNERGY_DMG_FILENAME"
+
+      - name: Sign applicaiton
+        run: |
+          export PATH="$Qt5_DIR/bin:$PATH"
+          macdeployqt ${{ github.workspace }}/build/bundle/Synergy.app -codesign="$CODESIGN_ID"
+          codesign -f --options runtime --deep -s "$CODESIGN_ID" ${{ github.workspace }}/build/bundle/Synergy.app
+          ln -s /Applications ${{ github.workspace }}/build/bundle/Applications
+
+      - name: Create Installer
+        env:
+          SYNERGY_DMG_FILENAME: ${{ steps.version.outputs.SYNERGY_DMG_FILENAME }}
+        run: |
+          dmgbuild \
+            -s CI/MacOS/installator_settings.py \
+            -D app=${{ github.workspace }}/build/bundle/Synergy.app \
+            -D background=${{ github.workspace }}/build/bundle/Synergy.app/Contents/Resources/.installer_background.tiff \
+            "Synergy" \
+            $SYNERGY_DMG_FILENAME
+          mkdir pkg
+          mv $SYNERGY_DMG_FILENAME pkg/
+          cd pkg
+          md5 -r $SYNERGY_DMG_FILENAME >> $SYNERGY_DMG_FILENAME.checksum.txt
+          shasum $SYNERGY_DMG_FILENAME >> $SYNERGY_DMG_FILENAME.checksum.txt
+          shasum -a 256 $SYNERGY_DMG_FILENAME >> $SYNERGY_DMG_FILENAME.checksum.txt
           
       - name: Upload bin directory
         uses: actions/upload-artifact@main
         if: steps.compile.outputs.status == 'success'
         with:
          name: Synergy-mac-bin${{ env.FILE_DATE }}
-         path: synergy-core/build/bin
+         path: ${{ github.workspace }}/pkg/
 
       - name: SSH connection to Actions
         uses: P3TERX/ssh2actions@v1.0.0
